--- a/index.html
+++ b/index.html
@@ -129,7 +129,7 @@
 		</svg>
 
 		<template id="card-template">
-			<div class="card mx-2" style="width: 22rem;">
+			<div class="card mx-2 my-2" style="width: 22rem;">
 				<div class="d-flex justify-content-between border-bottom">
 					<div class="mt-2 ms-3">
 						<span class="kart-ismi"></span>
